[tool.poetry]
name = "pipx-ansible-pull"
version = "0.0.0"
description = ""
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
readme = "README.md"
repository = "https://github.com/APN-Pucky/pipx-ansible-pull"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8.7.0"

[project.scripts]
pipx-ansible-pull = "ansible.cli.pull:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

