[tool.poetry]
name = "pipx-ansible-pull"
version = "0.0.0"
description = ""
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
readme = "README.md"
repository = "https://github.com/APN-Pucky/pipx-ansible-pull"
packages = [{include = "pipx_ansible_pull.py"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.4.0"

[tool.poetry.scripts]
pipx-ansible-pull = "pipx_ansible_pull:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

